# dynamic-wallpaper-importer

./: CMakeLists.txt  README.md
cmake/Modules/: Findlibheif.cmake  Findlibplist.cmake
src/: CMakeLists.txt  Importer.cc  Importer.h  Loader.cc  Loader.h  Wallpaper.cc  Wallpaper.h  Writer.cc  Writer.h  main.cc
src/importers/: CMakeLists.txt
src/importers/heic/: CMakeLists.txt  HeicImporter.cc  HeicImporter.h
